# authios

./: Cargo.toml  Dockerfile  config.json  to-add.md
application/: Cargo.toml
application/src/: error.rs  lib.rs  migrations.rs
application/src/repositories/: group.rs  migration.rs  mod.rs  permission.rs  user.rs
application/src/repositories/group/: delete.rs  grant.rs  insert.rs  list.rs  mod.rs  retrieve.rs  revoke.rs  sync.rs
application/src/repositories/group_permissions/: delete.rs  insert.rs  mod.rs
application/src/repositories/groups/: delete.rs  insert.rs  list.rs  retrieve.rs
application/src/repositories/migration/: migrate.rs  mod.rs
application/src/repositories/permission/: delete.rs  grant.rs  insert.rs  list.rs  mod.rs  retrieve.rs  revoke.rs  sync.rs
application/src/repositories/permissions/: delete.rs  insert.rs  list.rs  mod.rs  retrieve.rs
application/src/repositories/user/: check_permission.rs  delete.rs  from_token.rs  hash_password.rs  insert.rs  list.rs  login.rs  mod.rs  register.rs  retrieve.rs  sync.rs  update_pwd.rs
application/src/repositories/user_groups/: delete.rs  insert.rs
application/src/repositories/users/: delete.rs  insert.rs  list.rs  mod.rs  retrieve.rs  update.rs
application/src/routes/user/: authorize.rs  info.rs  login.rs  update_pwd.rs
application/src/use_cases/: mod.rs
application/src/use_cases/group/: create.rs  delete.rs  grant.rs  grant_permission.rs  list.rs  mod.rs  retrieve.rs  revoke.rs  revoke_permission.rs  sync.rs
application/src/use_cases/permission/: create.rs  delete.rs  grant.rs  list.rs  mod.rs  retrieve.rs  revoke.rs  sync.rs
application/src/use_cases/user/: authorize.rs  check_permission.rs  delete.rs  grant.rs  grant_group.rs  info.rs  list.rs  login.rs  mod.rs  register.rs  retrieve.rs  retrieve_from_token.rs  revoke.rs  revoke_group.rs  sync.rs  update_pwd.rs
application/src/utils/: jwt_token.rs  mod.rs  password_hash.rs
docs/http-api/: index.html  openapi-contract.yaml
docs/rust-api/: all.html  fn.main.html  index.html  sidebar-items.js
domain/: Cargo.toml
domain/src/: lib.rs
migrations/: 0001_initial.sql  0002_add_service_permission.sql  0003_resource_id_type.sql
presentation/: Cargo.toml  authios.json
presentation/src/: cli.rs  config.rs  error.rs  main.rs
presentation/src/routes/group/: create.rs  delete.rs  grant.rs  grant_permission.rs  mod.rs  revoke.rs  revoke_permission.rs
presentation/src/routes/permission/: create.rs  delete.rs  mod.rs
presentation/src/routes/user/: authorize.rs  grant.rs  grant_group.rs  info.rs  login.rs  mod.rs  register.rs  revoke.rs  revoke_group.rs  update_pwd.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/src/user/: authorize.rs  info.rs  login.rs  mod.rs  update_pwd.rs
src/: cli.rs  config.rs  main.rs
src/cli/: mod.rs
src/errors/: mod.rs
src/models/: claims.rs  group.rs  mod.rs  permission.rs  (+6 more)
(+603 files in other folders)
