[workspace]
resolver = "3"
members = ["presentation", "domain", "application", "sdk"]

[workspace.dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
clin = { git = "https://github.com/Baguuc/clin" }
colored = "3.0.0"
futures = "0.3.31"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1.46.1", features = ["full"] }
