[package]
name = "authios"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = "9"
chrono = "0.4.41"
async-trait = "0.1.88"
actix-web = "4"
thiserror = "2"
clap = { version = "4.5.40", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
clin = { git = "https://github.com/Baguuc/clin" }
colored = "3.0.0"
futures = "0.3.31"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1.46.1", features = ["full"] }
serde_with = "3.15.0"
